# graphics

./: .gitignore  CMakeLists.txt  README.md
examples/smoke_test/: CMakeLists.txt  main.cpp
examples/smoke_test/shaders/: basic.frag  basic.vert
include/graphics/: camera.hpp  fixedCamera.hpp  flyByCamera.hpp  shader.hpp  window.hpp
src/: shader.cpp  window.cpp
